// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginPage should match TPA provider snapshot 1`] = `
<div
  className="d-flex justify-content-center login-container"
>
  <div
    className="d-flex flex-column"
    style={
      Object {
        "width": "400px",
      }
    }
  >
    <div
      className="d-flex flex-row"
    >
      <p>
        First time here?
        <a
          className="ml-1"
          href="/register"
        >
          Create an Account.
        </a>
      </p>
    </div>
    <h3
      className="text-left mt-3"
    >
      Sign In
    </h3>
    <div
      className="section-heading-line mb-4"
    >
      <h4>
        or sign in with
      </h4>
    </div>
    <form
      className="m-0"
    >
      <div
        className="form-group"
      >
        <div
          className="d-flex flex-column align-items-start"
        >
          <div
            className="form-group"
          >
            <label
              className="h6 mr-1"
              htmlFor="loginEmail"
            >
              Email
            </label>
            <input
              aria-describedby=""
              className="form-control"
              id="loginEmail"
              name="email"
              onChange={[Function]}
              placeholder="username@domain.com"
              style={
                Object {
                  "width": "400px",
                }
              }
              type="email"
              value=""
            />
            <strong
              className="invalid-feedback"
              id="email-invalid-feedback"
            >
              The email address you've provided isn't formatted correctly.
            </strong>
          </div>
        </div>
        <p
          className="mb-4"
        >
          The email address you used to register with edX.
        </p>
        <div
          className="d-flex flex-column align-items-start"
        >
          <div
            className="form-group mb-0"
          >
            <label
              className="h6 mr-1"
              htmlFor="loginPassword"
            >
              Password
            </label>
            <input
              aria-describedby=""
              className="form-control"
              id="loginPassword"
              name="password"
              onChange={[Function]}
              style={
                Object {
                  "width": "400px",
                }
              }
              type="password"
              value=""
            />
            <strong
              className="invalid-feedback"
              id="password-invalid-feedback"
            >
              Please enter your password.
            </strong>
          </div>
        </div>
        <button
          className="mt-1 field-link"
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-caret-right fa-w-6 mr-1"
            data-icon="caret-right"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 192 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 384.662V127.338c0-17.818 21.543-26.741 34.142-14.142l128.662 128.662c7.81 7.81 7.81 20.474 0 28.284L34.142 398.804C21.543 411.404 0 402.48 0 384.662z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
          Need help signing in?
        </button>
        <div
          className="pgn-transition-replace-group position-relative"
          style={
            Object {
              "height": null,
            }
          }
        >
          <div
            style={
              Object {
                "padding": ".1px 0",
              }
            }
          />
        </div>
      </div>
      <button
        className="btn-primary submit btn btn-primary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Sign in
      </button>
    </form>
    <div
      className="section-heading-line mb-4"
    >
      <h4>
        or sign in with
      </h4>
    </div>
    <div
      className="row tpa-container"
    >
      <button
        className="btn-social btn-oa2-apple-id"
        data-provider-url="/auth/login/apple-id/?auth_entry=login&next=/dashboard"
        id="oa2-apple-id"
        onClick={[Function]}
        type="button"
      >
        <div
          aria-hidden="true"
        >
          <img
            alt="icon Apple"
            className="icon-image"
            src="https://edx.devstack.lms/logo.png"
          />
        </div>
        <span
          aria-hidden="true"
          className="pl-2"
        >
          Apple
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`LoginPage should match default section snapshot 1`] = `
<div
  className="d-flex justify-content-center login-container"
>
  <div
    className="d-flex flex-column"
    style={
      Object {
        "width": "400px",
      }
    }
  >
    <div
      className="d-flex flex-row"
    >
      <p>
        First time here?
        <a
          className="ml-1"
          href="/register"
        >
          Create an Account.
        </a>
      </p>
    </div>
    <h3
      className="text-left mt-3"
    >
      Sign In
    </h3>
    <div
      className="section-heading-line mb-4"
    >
      <h4>
        or sign in with
      </h4>
    </div>
    <form
      className="m-0"
    >
      <div
        className="form-group"
      >
        <div
          className="d-flex flex-column align-items-start"
        >
          <div
            className="form-group"
          >
            <label
              className="h6 mr-1"
              htmlFor="loginEmail"
            >
              Email
            </label>
            <input
              aria-describedby=""
              className="form-control"
              id="loginEmail"
              name="email"
              onChange={[Function]}
              placeholder="username@domain.com"
              style={
                Object {
                  "width": "400px",
                }
              }
              type="email"
              value=""
            />
            <strong
              className="invalid-feedback"
              id="email-invalid-feedback"
            >
              The email address you've provided isn't formatted correctly.
            </strong>
          </div>
        </div>
        <p
          className="mb-4"
        >
          The email address you used to register with edX.
        </p>
        <div
          className="d-flex flex-column align-items-start"
        >
          <div
            className="form-group mb-0"
          >
            <label
              className="h6 mr-1"
              htmlFor="loginPassword"
            >
              Password
            </label>
            <input
              aria-describedby=""
              className="form-control"
              id="loginPassword"
              name="password"
              onChange={[Function]}
              style={
                Object {
                  "width": "400px",
                }
              }
              type="password"
              value=""
            />
            <strong
              className="invalid-feedback"
              id="password-invalid-feedback"
            >
              Please enter your password.
            </strong>
          </div>
        </div>
        <button
          className="mt-1 field-link"
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-caret-right fa-w-6 mr-1"
            data-icon="caret-right"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 192 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 384.662V127.338c0-17.818 21.543-26.741 34.142-14.142l128.662 128.662c7.81 7.81 7.81 20.474 0 28.284L34.142 398.804C21.543 411.404 0 402.48 0 384.662z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
          Need help signing in?
        </button>
        <div
          className="pgn-transition-replace-group position-relative"
          style={
            Object {
              "height": null,
            }
          }
        >
          <div
            style={
              Object {
                "padding": ".1px 0",
              }
            }
          />
        </div>
      </div>
      <button
        className="btn-primary submit btn btn-primary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Sign in
      </button>
    </form>
  </div>
</div>
`;

exports[`LoginPage should match forget password alert message snapshot 1`] = `
<div
  className="d-flex justify-content-center login-container"
>
  <div
    className="d-flex flex-column"
    style={
      Object {
        "width": "400px",
      }
    }
  >
    <div
      className="d-flex flex-row"
    >
      <p>
        First time here?
        <a
          className="ml-1"
          href="/register"
        >
          Create an Account.
        </a>
      </p>
    </div>
    <h3
      className="text-left mt-3"
    >
      Sign In
    </h3>
    <div
      className="section-heading-line mb-4"
    >
      <h4>
        or sign in with
      </h4>
    </div>
    <form
      className="m-0"
    >
      <div
        className="form-group"
      >
        <div
          className="d-flex flex-column align-items-start"
        >
          <div
            className="form-group"
          >
            <label
              className="h6 mr-1"
              htmlFor="loginEmail"
            >
              Email
            </label>
            <input
              aria-describedby=""
              className="form-control"
              id="loginEmail"
              name="email"
              onChange={[Function]}
              placeholder="username@domain.com"
              style={
                Object {
                  "width": "400px",
                }
              }
              type="email"
              value=""
            />
            <strong
              className="invalid-feedback"
              id="email-invalid-feedback"
            >
              The email address you've provided isn't formatted correctly.
            </strong>
          </div>
        </div>
        <p
          className="mb-4"
        >
          The email address you used to register with edX.
        </p>
        <div
          className="d-flex flex-column align-items-start"
        >
          <div
            className="form-group mb-0"
          >
            <label
              className="h6 mr-1"
              htmlFor="loginPassword"
            >
              Password
            </label>
            <input
              aria-describedby=""
              className="form-control"
              id="loginPassword"
              name="password"
              onChange={[Function]}
              style={
                Object {
                  "width": "400px",
                }
              }
              type="password"
              value=""
            />
            <strong
              className="invalid-feedback"
              id="password-invalid-feedback"
            >
              Please enter your password.
            </strong>
          </div>
        </div>
        <button
          className="mt-1 field-link"
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-caret-right fa-w-6 mr-1"
            data-icon="caret-right"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 192 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 384.662V127.338c0-17.818 21.543-26.741 34.142-14.142l128.662 128.662c7.81 7.81 7.81 20.474 0 28.284L34.142 398.804C21.543 411.404 0 402.48 0 384.662z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
          Need help signing in?
        </button>
        <div
          className="pgn-transition-replace-group position-relative"
          style={
            Object {
              "height": null,
            }
          }
        >
          <div
            style={
              Object {
                "padding": ".1px 0",
              }
            }
          />
        </div>
      </div>
      <button
        className="btn-primary submit btn btn-primary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Sign in
      </button>
    </form>
  </div>
</div>
`;

exports[`LoginPage should show error message on 400 1`] = `
<div
  className="d-flex justify-content-center login-container"
>
  <div
    className="d-flex flex-column"
    style={
      Object {
        "width": "400px",
      }
    }
  >
    <div
      className="fade alert alert-danger show"
      role="alert"
    >
      <div>
        <h4
          style={
            Object {
              "color": "#a0050e",
            }
          }
        >
          <span>
            We couldn't sign you in.
          </span>
        </h4>
        <ul>
          <li>
            Email or password is incorrect.
          </li>
        </ul>
      </div>
    </div>
    <div
      className="d-flex flex-row"
    >
      <p>
        First time here?
        <a
          className="ml-1"
          href="/register"
        >
          Create an Account.
        </a>
      </p>
    </div>
    <h3
      className="text-left mt-3"
    >
      Sign In
    </h3>
    <div
      className="section-heading-line mb-4"
    >
      <h4>
        or sign in with
      </h4>
    </div>
    <form
      className="m-0"
    >
      <div
        className="form-group"
      >
        <div
          className="d-flex flex-column align-items-start"
        >
          <div
            className="form-group"
          >
            <label
              className="h6 mr-1"
              htmlFor="loginEmail"
            >
              Email
            </label>
            <input
              aria-describedby=""
              className="form-control"
              id="loginEmail"
              name="email"
              onChange={[Function]}
              placeholder="username@domain.com"
              style={
                Object {
                  "width": "400px",
                }
              }
              type="email"
              value=""
            />
            <strong
              className="invalid-feedback"
              id="email-invalid-feedback"
            >
              The email address you've provided isn't formatted correctly.
            </strong>
          </div>
        </div>
        <p
          className="mb-4"
        >
          The email address you used to register with edX.
        </p>
        <div
          className="d-flex flex-column align-items-start"
        >
          <div
            className="form-group mb-0"
          >
            <label
              className="h6 mr-1"
              htmlFor="loginPassword"
            >
              Password
            </label>
            <input
              aria-describedby=""
              className="form-control"
              id="loginPassword"
              name="password"
              onChange={[Function]}
              style={
                Object {
                  "width": "400px",
                }
              }
              type="password"
              value=""
            />
            <strong
              className="invalid-feedback"
              id="password-invalid-feedback"
            >
              Please enter your password.
            </strong>
          </div>
        </div>
        <button
          className="mt-1 field-link"
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-caret-right fa-w-6 mr-1"
            data-icon="caret-right"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 192 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 384.662V127.338c0-17.818 21.543-26.741 34.142-14.142l128.662 128.662c7.81 7.81 7.81 20.474 0 28.284L34.142 398.804C21.543 411.404 0 402.48 0 384.662z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
          Need help signing in?
        </button>
        <div
          className="pgn-transition-replace-group position-relative"
          style={
            Object {
              "height": null,
            }
          }
        >
          <div
            style={
              Object {
                "padding": ".1px 0",
              }
            }
          />
        </div>
      </div>
      <button
        className="btn-primary submit btn btn-primary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Sign in
      </button>
    </form>
  </div>
</div>
`;

exports[`LoginPage should show error message on 400 on receiving link 1`] = `
<div
  className="d-flex justify-content-center login-container"
>
  <div
    className="d-flex flex-column"
    style={
      Object {
        "width": "400px",
      }
    }
  >
    <div
      className="fade alert alert-danger show"
      role="alert"
    >
      <div>
        <h4
          style={
            Object {
              "color": "#a0050e",
            }
          }
        >
          <span>
            We couldn't sign you in.
          </span>
        </h4>
        <ul>
          <li>
            To be on the safe side, you can reset your password 
            <a
              href="/reset"
              onClick={[Function]}
              target="_self"
            >
              here
            </a>
             before you try again.
          </li>
        </ul>
      </div>
    </div>
    <div
      className="d-flex flex-row"
    >
      <p>
        First time here?
        <a
          className="ml-1"
          href="/register"
        >
          Create an Account.
        </a>
      </p>
    </div>
    <h3
      className="text-left mt-3"
    >
      Sign In
    </h3>
    <div
      className="section-heading-line mb-4"
    >
      <h4>
        or sign in with
      </h4>
    </div>
    <form
      className="m-0"
    >
      <div
        className="form-group"
      >
        <div
          className="d-flex flex-column align-items-start"
        >
          <div
            className="form-group"
          >
            <label
              className="h6 mr-1"
              htmlFor="loginEmail"
            >
              Email
            </label>
            <input
              aria-describedby=""
              className="form-control"
              id="loginEmail"
              name="email"
              onChange={[Function]}
              placeholder="username@domain.com"
              style={
                Object {
                  "width": "400px",
                }
              }
              type="email"
              value=""
            />
            <strong
              className="invalid-feedback"
              id="email-invalid-feedback"
            >
              The email address you've provided isn't formatted correctly.
            </strong>
          </div>
        </div>
        <p
          className="mb-4"
        >
          The email address you used to register with edX.
        </p>
        <div
          className="d-flex flex-column align-items-start"
        >
          <div
            className="form-group mb-0"
          >
            <label
              className="h6 mr-1"
              htmlFor="loginPassword"
            >
              Password
            </label>
            <input
              aria-describedby=""
              className="form-control"
              id="loginPassword"
              name="password"
              onChange={[Function]}
              style={
                Object {
                  "width": "400px",
                }
              }
              type="password"
              value=""
            />
            <strong
              className="invalid-feedback"
              id="password-invalid-feedback"
            >
              Please enter your password.
            </strong>
          </div>
        </div>
        <button
          className="mt-1 field-link"
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-caret-right fa-w-6 mr-1"
            data-icon="caret-right"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 192 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 384.662V127.338c0-17.818 21.543-26.741 34.142-14.142l128.662 128.662c7.81 7.81 7.81 20.474 0 28.284L34.142 398.804C21.543 411.404 0 402.48 0 384.662z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
          Need help signing in?
        </button>
        <div
          className="pgn-transition-replace-group position-relative"
          style={
            Object {
              "height": null,
            }
          }
        >
          <div
            style={
              Object {
                "padding": ".1px 0",
              }
            }
          />
        </div>
      </div>
      <button
        className="btn-primary submit btn btn-primary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Sign in
      </button>
    </form>
  </div>
</div>
`;
